--- a/KidKinder/Views/Dashboard/Index.cshtml
+++ b/KidKinder/Views/Dashboard/Index.cshtml
@@ -18,12 +18,12 @@
                 <div class="full counter_section margin_bottom_30">
                     <div class="couter_icon">
                         <div>
-                            <i class="fa fa-user yellow_color"></i>
+                            <i class="fa fa-cubes text-dark"></i>
                         </div>
                     </div>
                     <div class="counter_no">
                         <div>
-                            <p class="total_no">2500</p>
+                            <p class="total_no">@ViewBag.Class</p>
                             <p class="head_couter">Sınıf</p>
                         </div>
                     </div>
@@ -33,12 +33,12 @@
                 <div class="full counter_section margin_bottom_30">
                     <div class="couter_icon">
                         <div>
-                            <i class="fa fa-clock-o blue1_color"></i>
+                            <i class="fa fa-star blue1_color"></i>
                         </div>
                     </div>
                     <div class="counter_no">
                         <div>
-                            <p class="total_no">123.50</p>
+                            <p class="total_no">@ViewBag.Teachers</p>
                             <p class="head_couter">Öğretmen</p>
                         </div>
                     </div>
@@ -48,12 +48,12 @@
                 <div class="full counter_section margin_bottom_30">
                     <div class="couter_icon">
                         <div>
-                            <i class="fa fa-cloud-download green_color"></i>
+                            <i class="fa fa-smile-o yellow_color"></i>
                         </div>
                     </div>
                     <div class="counter_no">
                         <div>
-                            <p class="total_no">1,805</p>
+                            <p class="total_no">@ViewBag.Kids</p>
                             <p class="head_couter">Çocuk</p>
                         </div>
                     </div>
@@ -63,92 +63,14 @@
                 <div class="full counter_section margin_bottom_30">
                     <div class="couter_icon">
                         <div>
-                            <i class="fa fa-comments-o red_color"></i>
+                            <i class="fa fa-thumbs-o-up green_color"></i>
                         </div>
                     </div>
                     <div class="counter_no">
                         <div>
-                            <p class="total_no">54</p>
+                            <p class="total_no">@ViewBag.Capacity</p>
                             <p class="head_couter">Kalan Kontenjan</p>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row column1 social_media_section">
-            <div class="col-md-6 col-lg-3">
-                <div class="full socile_icons fb margin_bottom_30">
-                    <div class="social_icon">
-                        <i class="fa fa-facebook"></i>
-                    </div>
-                    <div class="social_cont">
-                        <ul>
-                            <li>
-                                <span><strong>35k</strong></span>
-                                <span>Friends</span>
-                            </li>
-                            <li>
-                                <span><strong>128</strong></span>
-                                <span>Feeds</span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="full socile_icons tw margin_bottom_30">
-                    <div class="social_icon">
-                        <i class="fa fa-twitter"></i>
-                    </div>
-                    <div class="social_cont">
-                        <ul>
-                            <li>
-                                <span><strong>584k</strong></span>
-                                <span>Followers</span>
-                            </li>
-                            <li>
-                                <span><strong>978</strong></span>
-                                <span>Tweets</span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="full socile_icons linked margin_bottom_30">
-                    <div class="social_icon">
-                        <i class="fa fa-linkedin"></i>
-                    </div>
-                    <div class="social_cont">
-                        <ul>
-                            <li>
-                                <span><strong>758+</strong></span>
-                                <span>Contacts</span>
-                            </li>
-                            <li>
-                                <span><strong>365</strong></span>
-                                <span>Feeds</span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="full socile_icons google_p margin_bottom_30">
-                    <div class="social_icon">
-                        <i class="fa fa-google-plus"></i>
-                    </div>
-                    <div class="social_cont">
-                        <ul>
-                            <li>
-                                <span><strong>450</strong></span>
-                                <span>Followers</span>
-                            </li>
-                            <li>
-                                <span><strong>57</strong></span>
-                                <span>Circles</span>
-                            </li>
-                        </ul>
                     </div>
                 </div>
             </div>
@@ -156,53 +78,32 @@
         <!-- graph -->
         <!-- end graph -->
         <div class="row column3">
-            <!-- testimonial -->
+
             <div class="col-md-6">
-                <div class="dark_bg full margin_bottom_30">
-                    <div class="full graph_head">
-                        <div class="heading1 margin_0">
-                            <h2>Testimonial</h2>
+                <div class="dash_blog">
+                    <div class="dash_blog_inner">
+                        <div class="dash_head">
+                            <h3><span><i class="fa fa-calendar"></i> @DateTime.Now.ToString("dd MMMM yyyy")</span><span class="plus_green_bt"><a href="#">+</a></span></h3>
                         </div>
-                    </div>
-                    <div class="full graph_revenue">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="content testimonial">
-                                    <div id="testimonial_slider" class="carousel slide" data-ride="carousel">
-                                        <!-- Wrapper for carousel items -->
-                                        <div class="carousel-inner">
-                                            <div class="item carousel-item active carousel-item-left">
-                                                <div class="img-box"><img src="images/layout_img/user_img.jpg" alt=""></div>
-                                                <p class="testimonial">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae..</p>
-                                                <p class="overview"><b>Michael Stuart</b>Seo Founder</p>
-                                            </div>
-                                            <div class="item carousel-item carousel-item-next carousel-item-left">
-                                                <div class="img-box"><img src="images/layout_img/user_img.jpg" alt=""></div>
-                                                <p class="testimonial">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae..</p>
-                                                <p class="overview"><b>Michael Stuart</b>Seo Founder</p>
-                                            </div>
-                                            <div class="item carousel-item">
-                                                <div class="img-box"><img src="images/layout_img/user_img.jpg" alt=""></div>
-                                                <p class="testimonial">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae..</p>
-                                                <p class="overview"><b>Michael Stuart</b>Seo Founder</p>
-                                            </div>
-                                        </div>
-                                        <!-- Carousel controls -->
-                                        <a class="carousel-control left carousel-control-prev" href="#testimonial_slider" data-slide="prev">
-                                            <i class="fa fa-angle-left"></i>
-                                        </a>
-                                        <a class="carousel-control right carousel-control-next" href="#testimonial_slider" data-slide="next">
-                                            <i class="fa fa-angle-right"></i>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="list_cont">
+                            <p>Today Tasks for Ronney Jack</p>
+                        </div>
+                        <div class="task_list_main">
+                            <ul class="task_list">
+                                <li><a href="#">Meeting about plan for Admin Template 2018</a><br><strong>10:00 AM</strong></li>
+                                <li><a href="#">Create new task for Dashboard</a><br><strong>10:00 AM</strong></li>
+                                <li><a href="#">Meeting about plan for Admin Template 2018</a><br><strong>11:00 AM</strong></li>
+                                <li><a href="#">Create new task for Dashboard</a><br><strong>10:00 AM</strong></li>
+                                <li><a href="#">Meeting about plan for Admin Template 2018</a><br><strong>02:00 PM</strong></li>
+                            </ul>
+                        </div>
+                        <div class="read_more">
+                            <div class="center"><a class="main_bt read_bt" href="#">Read More</a></div>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- end testimonial -->
-            <!-- progress bar -->
+            
             <div class="col-md-6">
                 <div class="white_shd full margin_bottom_30">
                     <div class="full graph_head">
