--- a/KidKinder/Views/Shared/Components/_TestimonialPartial/Default.cshtml
+++ b/KidKinder/Views/Shared/Components/_TestimonialPartial/Default.cshtml
@@ -1,6 +1,5 @@
 ﻿
 
-
 <div class="container-fluid py-5">
     <div class="container p-0">
         <div class="text-center pb-2">
@@ -18,7 +17,7 @@
                 </div>
                 <div class="d-flex align-items-center">
                     <img class="rounded-circle"
-                         src="img/testimonial-1.jpg"
+                         src="~/kidkinder-1.0.0/img/testimonial-1.jpg"
                          style="width: 70px; height: 70px"
                          alt="Image" />
                     <div class="pl-3">
