--- a/KidKinder/Views/Dashboard/Index.cshtml
+++ b/KidKinder/Views/Dashboard/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
@@ -78,12 +77,11 @@
         <!-- graph -->
         <!-- end graph -->
         <div class="row column3">
-
             <div class="col-md-6">
                 <div class="dash_blog">
                     <div class="dash_blog_inner">
                         <div class="dash_head">
-                            <h3><span><i class="fa fa-calendar"></i> @DateTime.Now.ToString("dd MMMM yyyy")</span><span class="plus_green_bt"><a href="#">+</a></span></h3>
+                            <h3><span><i class="fa fa-calendar"></i>&nbsp; Son Kayıt Olan Çocuklar</span><span class="plus_green_bt"><a href="/Kid/Index">+</a></span></h3>
                         </div>
                         <div class="list_cont">
                             <p>Today Tasks for Ronney Jack</p>
@@ -103,51 +101,6 @@
                     </div>
                 </div>
             </div>
-            
-            <div class="col-md-6">
-                <div class="white_shd full margin_bottom_30">
-                    <div class="full graph_head">
-                        <div class="heading1 margin_0">
-                            <h2>Progress Bar</h2>
-                        </div>
-                    </div>
-                    <div class="full progress_bar_inner">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="progress_bar">
-                                    <!-- Skill Bars -->
-                                    <span class="skill" style="width:73%;">Facebook <span class="info_valume">73%</span></span>
-                                    <div class="progress skill-bar ">
-                                        <div class="progress-bar progress-bar-animated progress-bar-striped" role="progressbar" aria-valuenow="73" aria-valuemin="0" aria-valuemax="100" style="width: 73%;">
-                                        </div>
-                                    </div>
-                                    <span class="skill" style="width:62%;">Twitter <span class="info_valume">62%</span></span>
-                                    <div class="progress skill-bar">
-                                        <div class="progress-bar progress-bar-animated progress-bar-striped" role="progressbar" aria-valuenow="62" aria-valuemin="0" aria-valuemax="100" style="width: 62%;">
-                                        </div>
-                                    </div>
-                                    <span class="skill" style="width:54%;">Instagram <span class="info_valume">54%</span></span>
-                                    <div class="progress skill-bar">
-                                        <div class="progress-bar progress-bar-animated progress-bar-striped" role="progressbar" aria-valuenow="54" aria-valuemin="0" aria-valuemax="100" style="width: 54%;">
-                                        </div>
-                                    </div>
-                                    <span class="skill" style="width:82%;">Google plus <span class="info_valume">82%</span></span>
-                                    <div class="progress skill-bar">
-                                        <div class="progress-bar progress-bar-animated progress-bar-striped" role="progressbar" aria-valuenow="82" aria-valuemin="0" aria-valuemax="100" style="width: 82%;">
-                                        </div>
-                                    </div>
-                                    <span class="skill" style="width:48%;">Other <span class="info_valume">48%</span></span>
-                                    <div class="progress skill-bar">
-                                        <div class="progress-bar progress-bar-animated progress-bar-striped" role="progressbar" aria-valuenow="48" aria-valuemin="0" aria-valuemax="100" style="width: 48%;">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- end progress bar -->
+            @await Component.InvokeAsync("_AdminProgressPartial")
         </div>
     </div>
-</div>
