--- a/KidKinder/Views/Dashboard/Index.cshtml
+++ b/KidKinder/Views/Dashboard/Index.cshtml
@@ -74,33 +74,23 @@
                 </div>
             </div>
         </div>
+
+        <div class="row column3">
+
+            @await Component.InvokeAsync("_AdminProgressPartial")
+
+            @await Component.InvokeAsync("_AdminTestimonialPartial")
+
+        </div>
         <!-- graph -->
         <!-- end graph -->
         <div class="row column3">
-            <div class="col-md-6">
-                <div class="dash_blog">
-                    <div class="dash_blog_inner">
-                        <div class="dash_head">
-                            <h3><span><i class="fa fa-calendar"></i>&nbsp; Son Kayıt Olan Çocuklar</span><span class="plus_green_bt"><a href="/Kid/Index">+</a></span></h3>
-                        </div>
-                        <div class="list_cont">
-                            <p>Today Tasks for Ronney Jack</p>
-                        </div>
-                        <div class="task_list_main">
-                            <ul class="task_list">
-                                <li><a href="#">Meeting about plan for Admin Template 2018</a><br><strong>10:00 AM</strong></li>
-                                <li><a href="#">Create new task for Dashboard</a><br><strong>10:00 AM</strong></li>
-                                <li><a href="#">Meeting about plan for Admin Template 2018</a><br><strong>11:00 AM</strong></li>
-                                <li><a href="#">Create new task for Dashboard</a><br><strong>10:00 AM</strong></li>
-                                <li><a href="#">Meeting about plan for Admin Template 2018</a><br><strong>02:00 PM</strong></li>
-                            </ul>
-                        </div>
-                        <div class="read_more">
-                            <div class="center"><a class="main_bt read_bt" href="#">Read More</a></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            @await Component.InvokeAsync("_AdminProgressPartial")
+
+            @await Component.InvokeAsync("_AdminDashboardKidsPartial")
+
+            @await Component.InvokeAsync("_AdminDashboardClassPartial")
+
         </div>
+
+    </div>
     </div>
