Teacher section completed

--- a/KidKinder/Areas/Admin/Views/Class/Index.cshtml
+++ b/KidKinder/Areas/Admin/Views/Class/Index.cshtml
@@ -25,9 +25,9 @@
                     </div>
                     <div class="table_section padding_infor_info">
                         <div class="table-responsive-sm">
-                            <table class="table table-striped">
-                                <thead>
-                                    <tr>
+                            <table class="table table-striped text-dark">
+                                <thead >
+                                    <tr class=" text-dark font-weight-bold">
                                         <th scope="col">Sınıf Adı</th>
                                         <th scope="col">Açıklama</th>
                                         <th scope="col">Yaş Aralığı</th>
