--- a/KidKinder/Views/LayoutPartial/AdminLayoutPartial/_SidebarPartial.cshtml
+++ b/KidKinder/Views/LayoutPartial/AdminLayoutPartial/_SidebarPartial.cshtml
@@ -23,22 +23,22 @@
         <ul class="list-unstyled components">
 
             <li><a href="/Default/Index" target="_blank"><i class="fa fa-file-text"></i> <span>Siteye Git</span></a></li>
-            <li class="active"><a href="/Dashboard/Index"><i class="fa fa-dashboard yellow_color"></i>Ana Panel</a></li>
-            <li><a href="/Class/Index"><i class="fa fa-clock-o orange_color"></i> <span>Sınıflar</span></a></li>
-            <li><a href="/Teacher/Index"><i class="fa fa-user"></i> <span>Öğretmenler</span></a></li>
-            <li><a href="/Children/Index"><i class="fa fa-group red_color"></i> <span>Öğrenciler</span></a></li>
-            <li> <a href="/Message/Index"> <i class="fa fa-paper-plane green_color"></i> <span>Mesajlar</span></a> </li>
+            <li class="active"><a href="/Admin/Dashboard/Index"><i class="fa fa-dashboard yellow_color"></i>Ana Panel</a></li>
+            <li><a href="/Admin/Class/Index"><i class="fa fa-clock-o orange_color"></i> <span>Sınıflar</span></a></li>
+            <li><a href="/Admin/Teacher/Index"><i class="fa fa-user"></i> <span>Öğretmenler</span></a></li>
+            <li><a href="/Admin/Kid/Index"><i class="fa fa-group red_color"></i> <span>Öğrenciler</span></a></li>
+            <li> <a href="/Admin/Message/Index"> <i class="fa fa-paper-plane green_color"></i> <span>Mesajlar</span></a> </li>
             <li class="active">
                 <a href="#additional_page" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-clone yellow_color"></i> <span>Kayıtlar</span></a>
                 <ul class="collapse list-unstyled" id="additional_page">
                     <li>
-                        <a href="profile.html">> <span>Onay Bekleyen Kayıtlar</span></a>
+                        <a href="/Admin/Message/Index">> <span>Onay Bekleyen Kayıtlar</span></a>
                     </li>
                     <li>
-                        <a href="project.html">> <span>Onaylanan Kayıtlar</span></a>
+                        <a href="/Admin/Message/Index">> <span>Onaylanan Kayıtlar</span></a>
                     </li>
                     <li>
-                        <a href="login.html">> <span>İptal Edilen Kayıtlar</span></a>
+                        <a href="/Admin/Message/Index">> <span>İptal Edilen Kayıtlar</span></a>
                     </li>
                 </ul>
             </li>
@@ -46,13 +46,13 @@
                 <a href="#setting_page" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-cog purple_color"></i> <span>Sayfa Ayarları</span></a>
                 <ul class="collapse list-unstyled" id="setting_page">
                     <li>
-                        <a href="/Feature/Index"> <span>Başlık</span></a>
+                        <a href="/Admin/Feature/Index"> <span>Başlık</span></a>
                     </li>
                     <li>
-                        <a href="/Testimonial/Index"> <span>Yorumlar</span></a>
+                        <a href="/Admin/Testimonial/Index"> <span>Yorumlar</span></a>
                     </li>
                     <li>
-                        <a href="/Contact/Index"> <span>İletişim</span></a>
+                        <a href="/Admin/Contact/Index"> <span>İletişim</span></a>
                     </li>
                 </ul>
             </li>
