--- a/KidKinder/Areas/Admin/Views/Teacher/Index.cshtml
+++ b/KidKinder/Areas/Admin/Views/Teacher/Index.cshtml
@@ -27,7 +27,7 @@
                     </div>
                     <div class="table_section padding_infor_info">
                         <div class="table-responsive-sm">
-                            <table class="table table-striped">
+                            <table class="table table-striped text-dark">
                                 <thead>
                                     <tr>
                                         <th scope="col">#</th>
@@ -53,14 +53,14 @@
                                             <td>@item.InstagramUrl</td>
                                             <td>@item.LinkedinUrl</td>
                                             <td>@item.ImageUrl</td>
-                                            <td><a href="/Teacher/UpdateTeacher/@item.TeacherID" class="btn btn-danger">Sil</a></td>
-                                            <td><a href="/Teacher/UpdateTeacher/@item.TeacherID" class="btn btn-success">Güncelle</a></td>
+                                            <td><a href="/Admin/Teacher/DeleteTeacher/@item.TeacherID" class="btn btn-danger">Sil</a></td>
+                                            <td><a href="/Admin/Teacher/UpdateTeacher/@item.TeacherID" class="btn btn-success">Güncelle</a></td>
                                         </tr>
                                     }
                                 </tbody>
                             </table>
                         </div>
-                        <a href="/Teacher/CreateTeacher" class="btn btn-primary">Öğretmen Kaydı Yap</a>
+                        <a href="/Admin/Teacher/CreateTeacher" class="btn btn-primary">Öğretmen Kaydı Yap</a>
                     </div>
 
                 </div>
