--- a/KidKinder/Areas/Admin/Views/_ViewImports.cshtml
+++ b/KidKinder/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using KidKinder
 @using KidKinder.Models
 @using KidKinder.Entities
+@using KidKinder.Areas.Admin.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
