--- a/KidKinder/Views/Shared/Components/_AdminDashboardClassPartial/Default.cshtml
+++ b/KidKinder/Views/Shared/Components/_AdminDashboardClassPartial/Default.cshtml
@@ -4,7 +4,7 @@
     <div class="dash_blog">
         <div class="dash_blog_inner">
             <div class="dash_head">
-                <h3><span><i class="fa fa-calendar"></i>&nbsp; Son Eklenen Sınıflar</span><span class="plus_green_bt"><a href="/Class/Index">+</a></span></h3>
+                <h3><span><i class="fa fa-calendar"></i>&nbsp; Son Eklenen Sınıflar</span><span class="plus_green_bt"><a href="/Admin/Class/Index">+</a></span></h3>
             </div>
             <div class="task_list_main">
                 <ul class="task_list">
