--- a/KidKinder/Areas/Admin/Views/Class/Index.cshtml
+++ b/KidKinder/Areas/Admin/Views/Class/Index.cshtml
@@ -48,14 +48,14 @@
                                             <td>@item.TotalSeats</td>
                                             <td>@item.ClassTime</td>
                                             <td>@item.TutionFee</td>
-                                            <td><a href="/Class/DeleteClass/@item.KidClassID" class="btn btn-danger">Sil</a></td>
-                                            <td><a href="/Class/UpdateClass/@item.KidClassID" class="btn btn-warning">Güncelle</a></td>
+                                            <td><a href="/Admin/Class/DeleteClass/@item.KidClassID" class="btn btn-danger">Sil</a></td>
+                                            <td><a href="/Admin/Class/UpdateClass/@item.KidClassID" class="btn btn-warning">Güncelle</a></td>
                                         </tr>
                                     }
                                 </tbody>
                             </table>
                         </div>
-                        <a href="/Class/CreateClass" class="btn btn-primary">Sınıf Oluştur</a>
+                        <a href="/Admin/Class/CreateClass" class="btn btn-primary">Sınıf Oluştur</a>
                     </div>
                 </div>
             </div>
