There is an error with CreateTeacher section

--- a/KidKinder/Areas/Admin/Views/Teacher/UpdateTeacher.cshtml
+++ b/KidKinder/Areas/Admin/Views/Teacher/UpdateTeacher.cshtml
@@ -29,6 +29,7 @@
                             <!-- table section -->
                             <form method="post" enctype="multipart/form-data">
                                 <input type="hidden" asp-for="TeacherID"/>
+                                <input type="hidden" asp-for="ImageUrl" />
                                 <div class="form-group p-1">
                                     <label>Öğretmen Adı</label>
                                     <input type="text" class="form-control form-control-s" asp-for="Name" placeholder="Öğretmen Adını girin">
