Identity class created and downloaded

--- a/KidKinder/Areas/Admin/Views/Teacher/CreateTeacher.cshtml
+++ b/KidKinder/Areas/Admin/Views/Teacher/CreateTeacher.cshtml
@@ -16,6 +16,11 @@
             </div>
         </div>
         <!-- row -->
+
+
+        <!-- Öğretmen oluşturmada hata veriyor ordna devam et-->
+
+
         <div class="row">
             <div class="col-md-12">
                 <div class="white_shd full margin_bottom_30">
