--- a/KidKinder/Views/LayoutPartial/AdminLayoutPartial/_ScriptPartial.cshtml
+++ b/KidKinder/Views/LayoutPartial/AdminLayoutPartial/_ScriptPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-<script src="~/pluto-1.0.0/js/jquery.min.js"></script>
 <script src="~/pluto-1.0.0/js/popper.min.js"></script>
 <script src="~/pluto-1.0.0/js/bootstrap.min.js"></script>
 <!-- wow animation -->
@@ -9,16 +9,16 @@
 <script src="~/pluto-1.0.0/js/bootstrap-select.js"></script>
 <!-- owl carousel -->
 <script src="~/pluto-1.0.0/js/owl.carousel.js"></script>
-<!-- chart js -->
+<!-- chart js -->@* 
 <script src="~/pluto-1.0.0/js/Chart.min.js"></script>
-<script src="~/pluto-1.0.0/js/Chart.bundle.min.js"></script>
-<script src="~/pluto-1.0.0/js/utils.js"></script>
-<script src="~/pluto-1.0.0/js/analyser.js"></script>
+<script src="~/pluto-1.0.0/js/Chart.bundle.min.js"></script> *@
+<script src="~/pluto-1.0.0/js/utils.js"></script>@* 
+<script src="~/pluto-1.0.0/js/analyser.js"></script> *@
 <!-- nice scrollbar -->
 <script src="~/pluto-1.0.0/js/perfect-scrollbar.min.js"></script>
 <script>
     var ps = new PerfectScrollbar('#sidebar');
 </script>
-<!-- custom js -->
-<script src="~/pluto-1.0.0/js/custom.js"></script>
-<script src="~/pluto-1.0.0/js/chart_custom_style1.js"></script>
+<!-- custom js -->@* 
+<script src="~/pluto-1.0.0/js/custom.js"></script>@* 
+<script src="~/pluto-1.0.0/js/chart_custom_style1.js"></script> *@
