--- a/KidKinder/Views/Shared/Components/_ClassesPartial/Default.cshtml
+++ b/KidKinder/Views/Shared/Components/_ClassesPartial/Default.cshtml
@@ -10,7 +10,7 @@
             <h1 class="mb-4">Çocuklarınız için Sınıflar</h1>
         </div>
         <div class="row">
-            @foreach(var item in Model)
+            @foreach(var item in Model.Take(3))
             {
                 <div class="col-lg-4 mb-5">
                     <div class="card border-0 bg-light shadow-sm pb-2">
