--- a/KidKinder/Views/LayoutPartial/UILayoutPartial/_UINavbarPartial.cshtml
+++ b/KidKinder/Views/LayoutPartial/UILayoutPartial/_UINavbarPartial.cshtml
@@ -16,12 +16,12 @@
         <div class="collapse navbar-collapse justify-content-between"
              id="navbarCollapse">
             <div class="navbar-nav font-weight-bold mx-auto py-0">
-                <a href="index.html" class="nav-item nav-link active">Home</a>
-                <a href="about.html" class="nav-item nav-link">Hakkımızda</a>
-                <a href="class.html" class="nav-item nav-link">Sınıflar</a>
-                <a href="team.html" class="nav-item nav-link">Öğretmenler</a>
-                <a href="gallery.html" class="nav-item nav-link">Galeri</a>
-                <a href="contact.html" class="nav-item nav-link">İletişim</a>
+                <a href="/Default/Index" class="nav-item nav-link active">Home</a>
+                <a href="/About/Index" class="nav-item nav-link">Hakkımızda</a>
+                <a href="/Classes/Index" class="nav-item nav-link">Sınıflar</a>
+                <a href="/Teachers/Index" class="nav-item nav-link">Öğretmenler</a>
+                <a href="/Gallery/Index" class="nav-item nav-link">Galeri</a>
+                <a href="/GetInTouch/Index" class="nav-item nav-link">İletişim</a>
             </div>
             <a href="" class="btn btn-primary px-4">Hemen Kayıt Yaptır..</a>
         </div>
