--- a/KidKinder/Views/GetInTouch/Index.cshtml
+++ b/KidKinder/Views/GetInTouch/Index.cshtml
@@ -22,8 +22,7 @@
         <div class="row">
             <div class="col-lg-7 mb-5">
                 <div class="contact-form">
-                    <div id="success"></div>
-                    <form name="sentMessage" id="contactForm" novalidate="novalidate">
+                    <form method="post">
                         <div class="control-group">
                             <input type="text" asp-for="Name"
                                    class="form-control"
@@ -62,8 +61,7 @@
                         </div>
                         <div>
                             <button class="btn btn-primary py-2 px-4"
-                                    type="submit"
-                                    id="sendMessageButton">
+                                    type="submit">
                                 Mesaj Gönder
                             </button>
                         </div>
