--- a/KidKinder/Views/Gallery/Index.cshtml
+++ b/KidKinder/Views/Gallery/Index.cshtml
@@ -21,9 +21,9 @@
             {
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="" style="width: 500px; height: 300px; object-fit: fill; border-radius:10px" src="@item.ImageUrl" alt="" />
+                        <img class="img-fluid" style="width: 500px; height: 300px; border-radius:10px" src="/galleryImages/@item.ImageUrl" alt="" />
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                            <a href="@item.ImageUrl" data-lightbox="portfolio">
+                            <a href="/galleryImages/@item.ImageUrl" data-lightbox="portfolio">
                                 <i class="fa fa-plus text-white" style="font-size: 60px"></i>
                             </a>
                         </div>
@@ -32,5 +32,21 @@
             }
            
         </div>
+    </div>
+</div>
+
+<div class="container-fluid bg-secondary text-white mt-5 py-5 px-sm-3 px-md-5">
+    <div class="container-fluid pt-5"
+         style="border-top: 1px solid rgba(23, 162, 184, 0.2) ;">
+        <p class="m-0 text-center text-white">
+            &copy;
+            <a class="text-primary font-weight-bold" href="#">KidKinder </a>.
+            Tüm hakları saklıdır.
+
+            Designed by
+            <a class="text-primary font-weight-bold" href="https://htmlcodex.com">Kadir GÜVEN</a>
+            <br />Distributed By:
+            <a href="#" target="_blank">Murat YÜCEDAĞ</a>
+        </p>
     </div>
 </div>
