Kids section completed

--- a/KidKinder/Views/LayoutPartial/AdminLayoutPartial/_SidebarPartial.cshtml
+++ b/KidKinder/Views/LayoutPartial/AdminLayoutPartial/_SidebarPartial.cshtml
@@ -28,6 +28,7 @@
             <li><a href="/Admin/Teacher/Index"><i class="fa fa-user"></i> <span>Öğretmenler</span></a></li>
             <li><a href="/Admin/Kid/Index"><i class="fa fa-group red_color"></i> <span>Öğrenciler</span></a></li>
             <li> <a href="/Admin/Message/Index"> <i class="fa fa-paper-plane green_color"></i> <span>Mesajlar</span></a> </li>
+            <li> <a href="/Admin/Gallery/Index"> <i class="fa fa-image white_color"></i> <span>Galeri</span></a> </li>
             <li class="active">
                 <a href="#additional_page" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-clone yellow_color"></i> <span>Kayıtlar</span></a>
                 <ul class="collapse list-unstyled" id="additional_page">
