Main Class section completed

--- a/KidKinder/Views/Gallery/Index.cshtml
+++ b/KidKinder/Views/Gallery/Index.cshtml
@@ -7,6 +7,19 @@
 }
 
 
+<div class="container-fluid bg-primary mb-5">
+    <div class="d-flex flex-column align-items-center justify-content-center"
+         style="min-height: 400px">
+        <h3 class="display-3 font-weight-bold text-white">Galeri</h3>
+        <div class="d-inline-flex text-white">
+            <p class="m-0"><a class="text-white" href="">Ana Sayfa</a></p>
+            <p class="m-0 px-2">/</p>
+            <p class="m-0">Galeri</p>
+        </div>
+    </div>
+</div>
+
+
 <div class="container-fluid pt-5 pb-3">
     <div class="container">
         <div class="text-center pb-2">
